# gistools-CLI

./: .gitignore  README.md  README_CN.md  pyproject.toml
cli/: analysis.py  buffer.py  convert.py  data.py  main.py  reproject.py  spatial.py
core/: analysis.py  batch.py  crs.py  data_mgmt.py  dem.py  formats.py  rasterize.py  spatial.py
docs/: 2026-04-15-gistools-design.md  CHANGELOG.md  DESIGN.md  TODO.md
docs/superpowers/plans/: 2026-04-15-gistools-prototype.md
gistools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
testdata/: LRMS.tif  reproject.dbf  reproject.geojson  reproject.shp  reproject.tif  范围.dbf  范围.sbn  范围.sbx  范围.shx
tests/: conftest.py  test_analysis_cmd.py  test_buffer_cmd.py  test_convert_cmd.py  test_crs.py  test_data_cmd.py  test_formats.py  test_reproject_cmd.py  test_spatial.py  test_spatial_cmd.py
