[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "gistools"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.0",
]

[project.scripts]
gistools = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false
